# zuru-melon-company-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: Agent assignment.md  Company Procedures & Guidelines.md
src/: cli.py  config.py
src/agent/: executor.py  router.py
src/knowledge_base/: loader.py  retriever.py
src/safety/: guardrail.py
src/zuru_melon_company_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_safety.py
